--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ p {
 
 .hero {
   text-align: center;
-  background: url("/images/mobile/image-header.jpg");
+  background: url("./image-header.jpg");
   height: 82vh;
   background-size: cover;
   background-position-y: bottom;
@@ -149,7 +149,7 @@ p {
 
 .grid .grid-container1 {
   height: 45vh;
-  background: url("../images/mobile/image-transform.jpg");
+  background: url("./image-transform.jpg");
 }
 
 .grid .grid-container2 {
@@ -158,7 +158,7 @@ p {
 
 .grid .grid-container3 {
   height: 45vh;
-  background: url("../images/mobile/image-stand-out.jpg");
+  background: url("./image-stand-out.jpg");
 }
 
 .grid .grid-container4 {
@@ -167,12 +167,12 @@ p {
 
 .grid .grid-container5 {
   height: 90vh;
-  background: url("../images/mobile/image-graphic-design.jpg");
+  background: url("./image-graphic-design.jpg");
 }
 
 .grid .grid-container6 {
   height: 90vh;
-  background: url("../images/mobile/image-photography.jpg");
+  background: url("./image-photography.jpg");
 }
 
 .grid .white-bg {
@@ -346,7 +346,8 @@ footer {
 footer .grid-footer {
   display: -ms-grid;
   display: grid;
-      grid-template-areas: "A B"  "C D";
+      grid-template-areas: "A B" 
+ "C D";
 }
 
 footer .grid-footer .grid-footer:nth-child(1) {
@@ -408,7 +409,7 @@ footer ul li:hover {
 
 @media screen and (min-width: 1000px) {
   .hero {
-    background: url("../images/desktop/image-header.jpg");
+    background: url("./image-header.jpg");
     height: 100vh;
     background-size: cover;
   }
@@ -482,7 +483,7 @@ footer ul li:hover {
     -ms-grid-column: 2;
     -ms-grid-column-span: 1;
     grid-column: 2/3;
-    background: url("../images/desktop/image-transform.jpg");
+    background: url("./image-transform.jpg");
   }
   .grid .grid-container2 {
     -ms-grid-column: 1;
@@ -493,16 +494,16 @@ footer ul li:hover {
     grid-row: 1/2;
   }
   .grid .grid-container3 {
-    background: url("../images/desktop/image-stand-out.jpg");
+    background: url("./image-stand-out.jpg");
   }
   .grid .grid-container5 {
-    background: url("../images/desktop/image-graphic-design.jpg");
+    background: url("./image-graphic-design.jpg");
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
   }
   .grid .grid-container6 {
-    background: url("../images/desktop/image-photography.jpg");
+    background: url("./image-photography.jpg");
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
